--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -110,16 +110,35 @@ Material Theme UI					主题插件，以下是一些热门主题
 
 #### File | Preferences
 
-```tex
+```markdown
+# 注意：新版本需要点击[左下角 ⚙] → [Settings] 或者 [Ctrl + ,] (这个快捷键一般会冲突)
 Settings → 搜索 Enable Preview → 点击 Workbench | Editor Management → 取消勾选 Enable Preview
 ```
 
 #### 新建窗口打开
 
 ```tex
-User | Window | New Window
+Settings | User | Window | New Window
                            → Open Files In New Window → on
                            → Open Folders in New Window → on
+```
+
+#### Terminal编码
+
+```bash
+Settings → 点击[右上角 📄Open Settings (JSON)] → 添加如下佩蓉
+    "terminal.integrated.profiles.windows": {
+        "PowerShell": {
+            "source": "PowerShell",
+            "args": [
+                "-NoExit",
+                "-Command",
+                "[Console]::OutputEncoding = [System.Text.Encoding]::UTF8; $OutputEncoding = [System.Text.Encoding]::UTF8"
+            ]
+        }
+    },
+    "terminal.integrated.defaultProfile.windows": "PowerShell",
+VSCode
 ```
 
 #### 语言设置
@@ -1733,6 +1752,25 @@ New | Project
   同样使用 CMakeLists.txt 文件来配置构建过程
 3) [×]Add Onboarding Tips
   勾选后，CLion会在创建项目时给一些帮助和提示，使得快速了解如何设置项目、构建、调试等功能
+```
+
+##### * 项目文件
+
+```markdown
+右击项目 | New
+1) cpp 和 h 一起创建
+[C++ Class]
+           → Name [xxx]
+           → Type [.cpp /.h]
+           → OK
+2) 只创建 c/cpp
+[C/C++ Source File]
+                   → Name [yyy]
+                   → Name [c / cpp / cu]
+3) 只创建 c/cpp 的 h 文件
+[C/C++ Header File]
+                   → Name [yyy]
+                   → Name [h / cuh]
 ```
 
 ##### * 重新构建项目
