--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -2012,20 +2012,20 @@ g++ -o myprogram myprogram.cpp
 
 ```tex
 1) 创建源文件hello.cpp
+#include "hello.h"
 #include <iostream>
 #include <math.h>
 using namespace std;
-int helloworld(){
-    double x = pow(1.1,2);
+int helloworld() {
+    double x = pow(1.1, 2);
     double y = sqrt(x);
     cout << x << endl; /* 输出并换行 */
     cout << y << endl;
-    cout << "hello world !" << endl;
+    cout << "~奈斯兔米兔~" << endl;
     return 0;
 }
 
 2) 创建头文件hello.h，在头文件中定义函数
-#include<stdio.h>
 int helloworld();
 
 3) 使用命令创建动态库dll
@@ -2039,18 +2039,28 @@ g++ hello.cpp -o hello.dll -shared
 gcc hello.cpp -lstdc++ -o hello.dll -shared
 
 4) 动态库的引用，创建main.c
-#include <stdio.h>
 #include "hello.h"
-int main()
-{
+#include <stdio.h>
+int main() {
+    auto lang = "C++";
+    printf("Hello and welcome to %s!\n", lang);
+
+    for (int i = 1; i <= 5; i++) {
+        printf("i = %d!\n", i);
+    }
+
     helloworld();
+    
     return 0;
 }
 
 5) 在main中引用动态库hello.dll
-这里要注意第二个参数hello（动态库名）前要加-l。-L指定库的搜索路径，-l指定库名。
+这里要注意第二个参数hello(动态库名)前要加-l
+-L指定库的搜索路径，-l指定库名
 g++ -c main.c -o main.o
 g++ main.o -L. -lhello -o main.exe
+[编译和连接]
+g++ main.c -o main.exe -L. -lhello
 
 6) 运行main.exe，得到结果
 .\main.exe
