--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -6139,6 +6139,37 @@ https://gitcode.net/mirrors/workpixels/uninstall-reinstall-onedrive?utm_source=c
 
 ## 常见问题
 
+### Windows PowerShell 编码
+
+```bash
+# 默认[GBK]编码
+chcp 936
+[Console]::OutputEncoding = [System.Text.Encoding]::GetEncoding("GBK")
+$OutputEncoding = [System.Text.Encoding]::GetEncoding("GBK")
+
+# 设置[UTF8]
+chcp 65001
+[Console]::OutputEncoding = [System.Text.Encoding]::UTF8
+$OutputEncoding = [System.Text.Encoding]::UTF8
+
+# 上述配置只在当前会话有效，想要永久生效，可按如下步骤
+1) PowerShell 输入
+$PROFILE
+2) 输出如下(如果文件不存在，创建它)
+C:\Users\Viski\Documents\WindowsPowerShell\Microsoft.PowerShell_profile.ps1
+if (-not (Test-Path $PROFILE)) { New-Item -Path $PROFILE -ItemType File -Force }
+3) 编辑 $PROFILE 文件，添加以下内容
+[Console]::OutputEncoding = [System.Text.Encoding]::UTF8
+$OutputEncoding = [System.Text.Encoding]::UTF8
+4) 重启 PowerShell
+# 注意：如果 PowerShell 是 Windows PowerShell 5.1，可能需要额外的权限允许执行脚本
+Set-ExecutionPolicy -Scope CurrentUser -ExecutionPolicy RemoteSigned
+# 版本查看
+$PSVersionTable
+$PSVersionTable.PSVersion
+Get-Host | Select-Object Version
+```
+
 ### 开放端口
 
 ```markdown
