--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -2061,6 +2061,8 @@ g++ -c main.c -o main.o
 g++ main.o -L. -lhello -o main.exe
 [编译和连接]
 g++ main.c -o main.exe -L. -lhello
+[指定编码]
+g++ -fexec-charset=UTF-8 -finput-charset=UTF-8 main.c -o main.exe -L. -lhello
 
 6) 运行main.exe，得到结果
 .\main.exe
