--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -609,7 +609,7 @@ Editor | General | Editor Tabs → 取消勾选 Show tabs in one row(选择 Mult
 ##### * 编码设置
 
 ```markdown
-# 控制台编码设置
+# 控制台编码
 Editor | General | Console → Default Encoding → 设UTF-8
 
 # 全局编码、项目编码、属性文件的默认编码
@@ -1718,6 +1718,12 @@ https://www.jetbrains.com/clion/download/other.html
 同[IDEA]
 ```
 
+##### * 编码设置
+
+```tex
+同[IDEA]
+```
+
 ##### * 编译器配置
 
 ```markdown
@@ -1726,6 +1732,18 @@ Build,Execution,Deployment | Toolchains
              → Name [MinGW]
              → Toolset [Bundled / mingw64目录]
              → Debugger [Bundled GDB / MinGW GDB]
+```
+
+##### * 终端配置
+
+```markdown
+Tools | Terminal
+                 → Application Settings
+                   → Shell path
+                     C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
+                     C:\Windows\system32\cmd.exe
+                     删除为 null → 选择[系统环境变量]中[Path 优先级较高]的那一个
+                 注意：目前怎么选择，都是使用 cmd，待解决
 ```
 
 ##### * 跨平台构建
@@ -1773,10 +1791,79 @@ New | Project
                    → Name [h / cuh]
 ```
 
-##### * 重新构建项目
+##### * 重载项目
+
+```tex
+Reload CMake Project
+```
+
+#### Build
+
+##### * 构建项目
+
+```tex
+Build Project
+```
+
+##### * 重构项目
+
+```tex
+Rebuild Project
+```
+
+### # CLion-常见问题
+
+#### * 中文乱码
+
+##### 方案1 (推荐)
 
 ```markdown
-Reload CMake Project
+# 取消勾选 pty
+[Ctrl + Alt + Shift + /] → Registry → [×] run.processes.with.pty
+
+# 在 Run 模式下
+CLion 默认使用 PTY 伪终端（Pseudo Terminal）运行进程，可能会影响控制台编码
+# 在 Debug 模式下
+不会使用 PTY，而是直接通过 GDB 运行
+# [×] run.processes.with.pty
+Run 进程也使用普通终端
+```
+
+##### 方案2 (可用)
+
+```markdown
+# 设置[输入/输出 编码]
+SetConsoleCP(65001);
+SetConsoleOutputCP(65001);
+```
+
+##### 方案3 (可用)
+
+```markdown
+# 设置[执行命令]
+system("chcp 65001");
+```
+
+##### 方案4 (无用)
+
+```markdown
+# CMakeLists.txt 配置
+-- [c++]
+Set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")
+-- [c]
+Set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -fexec-charset=GBK")
+```
+
+##### 注意：
+
+```markdown
+# 方案1 是在CLion[内部]执行
+# 方案2、方案3、方案4 是在CLion[外部]执行
+# [外部]执行，需要[暂停控制台]等待确认[否则会闪退]
+system("pause");
+
+# [勾选] 在外部控制台中运行
+Run | Edit Configurations → [√] Run in external console
 ```
 
 ## 【语言】工具汇总
