--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -6141,33 +6141,67 @@ https://gitcode.net/mirrors/workpixels/uninstall-reinstall-onedrive?utm_source=c
 
 ### Windows PowerShell 编码
 
-```bash
-# 默认[GBK]编码
-chcp 936
-[Console]::OutputEncoding = [System.Text.Encoding]::GetEncoding("GBK")
-$OutputEncoding = [System.Text.Encoding]::GetEncoding("GBK")
+| 代码页 | 编码类型 | 适用场景             |
+| ------ | -------- | -------------------- |
+| 65001  | UTF-8    | 多语言支持、现代程序 |
+| 936    | GBK      | 简体中文默认         |
+| 437    | OEM 美国 | 英文系统默认         |
 
+#### 当前会话
+
+```bash
+# 默认为[GBK]编码
+chcp 936
 # 设置[UTF8]
+chcp 65001
+```
+
+#### 永久生效(不推荐)
+
+```bash
+# PowerShell 输入
+$PROFILE
+# 输出如下(如果文件不存在，创建它)
+C:\Users\Viski\Documents\WindowsPowerShell\Microsoft.PowerShell_profile.ps1
+if (-not (Test-Path $PROFILE)) { New-Item -Path $PROFILE -ItemType File -Force }
+# 编辑 $PROFILE 文件，添加以下内容(只配置 [chcp 代码页] 就可以生效了)
+/* [UTF8] */
 chcp 65001
 [Console]::OutputEncoding = [System.Text.Encoding]::UTF8
 $OutputEncoding = [System.Text.Encoding]::UTF8
-
-# 上述配置只在当前会话有效，想要永久生效，可按如下步骤
-1) PowerShell 输入
-$PROFILE
-2) 输出如下(如果文件不存在，创建它)
-C:\Users\Viski\Documents\WindowsPowerShell\Microsoft.PowerShell_profile.ps1
-if (-not (Test-Path $PROFILE)) { New-Item -Path $PROFILE -ItemType File -Force }
-3) 编辑 $PROFILE 文件，添加以下内容
-[Console]::OutputEncoding = [System.Text.Encoding]::UTF8
-$OutputEncoding = [System.Text.Encoding]::UTF8
-4) 重启 PowerShell
+/* [GBK] */
+chcp 936
+[Console]::OutputEncoding = [System.Text.Encoding]::GetEncoding("GBK")
+$OutputEncoding = [System.Text.Encoding]::GetEncoding("GBK")
+# 重启 PowerShell
 # 注意：如果 PowerShell 是 Windows PowerShell 5.1，可能需要额外的权限允许执行脚本
 Set-ExecutionPolicy -Scope CurrentUser -ExecutionPolicy RemoteSigned
 # 版本查看
 $PSVersionTable
 $PSVersionTable.PSVersion
 Get-Host | Select-Object Version
+```
+
+### Command 编码
+
+#### 当前会话
+
+```tex
+同上
+```
+
+#### 永久生效(不推荐)
+
+```markdown
+# [Win + R]
+输入 regedit
+# 导航到路径
+\HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Command Processor
+# 右键右侧空白处
+新建一个 字符串值(REG_SZ) 名为 Autorun
+# 双击 Autorun
+设置值为 chcp 65001
+# 重启 CMD 生效
 ```
 
 ### 开放端口
