--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -1390,6 +1390,15 @@ File | Settings | Version Control | Git → 勾选 Execute branch operations on 
 
 ![image-20240826182954428](../imgs/01/Tools/IDEA/image-20240826182954428.png)
 
+#### * 重新关联Git
+
+```markdown
+# 假设 [.git] 文件在 [D:\DevSpace] 目录
+File | Settings | Version Control | Directory Mappings
+➕
+   → Directory [D:\DevSpace]
+```
+
 ### # IDEA-Spring相关
 
 #### * [Springboot热部署](https://www.cnblogs.com/blog5277/p/9271882.html)
