--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -2073,7 +2073,7 @@ CRUD --- 员工列表，传统与现代命名规范-对比
 | 查询 | getEmp                   | emp  →  GET         |
 | 添加 | addEmp?xxx               | emp  →  POST        |
 | 修改 | updateEmp?id=xxx&x=xxx   | emp/{id}  →  PUT    |
-| 删除 | delete?id=1              | emp/{id}  →  DELETE |
+| 删除 | deleteEmp?id=1           | emp/{id}  →  DELETE |
 
 restful 采用标准 CRUD --- 员工列表
 
@@ -2092,34 +2092,42 @@ restful 采用标准 CRUD --- 员工列表
 ### Service 接口命名
 
 ```tex
-save(推荐)/add
+save(推荐) / add
+saveXXX / saveOne
+batchSave
 
 remove
+removeById / removeXXX
+batchRemove
 
-modify
+modify(推荐) / update
+modifyById / modifyXXX
+batchModify
 
-find/get
-findById
-findByXXX
-findXXXList
+find(推荐) / get
+findById / findOne
+findList
 ```
 
 ### Dao 接口命名
 
 ```tex
 insert
+insertXXX / insertOne
 batchInsert
 
 delete
-deleteById
+deleteById / deleteXXX
+batchDelete
 
 update
+updateById / updateXXX
 batchUpdate
 
-select(获取单个对象-推荐)、count(数量查询)/query(获取多个对象-推荐)
-selectOne
-selectById
-selectXXXList
+select(获取单个对象-推荐)	|	query(获取多个对象-推荐)
+selectCount(数量查询)
+selectById / selectOne	 |	 queryByIds
+selectList | queryXXXs
 ```
 
 # Mysql数据库
