--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -171,6 +171,180 @@ https://www.dcloud.io/hbuilderx.html
 压缩打包
 ```
 
+## 【[CLion](https://www.jetbrains.com/clion)】c/C工具
+
+```markdown
+# 下载地址
+https://www.jetbrains.com/clion/download
+
+# 往期版本
+https://www.jetbrains.com/clion/download/other.html
+```
+
+### # 基础配置
+
+#### File | Settings
+
+##### * 窗口设置
+
+```tex
+同[IDEA]
+```
+
+##### * 字体样式
+
+```markdown
+同[IDEA]
+```
+
+##### * 编码设置
+
+```tex
+同[IDEA]
+```
+
+##### * 编译器配置
+
+```markdown
+Build,Execution,Deployment | Toolchains
+➕ → [MinGw]
+             → Name [MinGW]
+             → Toolset [Bundled / mingw64目录]
+             → Debugger [Bundled GDB / MinGW GDB]
+```
+
+##### * 终端配置
+
+```markdown
+Tools | Terminal
+                 → Application Settings
+                   → Shell path
+                     C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
+                     C:\Windows\system32\cmd.exe
+                     删除为 null → 选择[系统环境变量]中[Path 优先级较高]的那一个
+                 注意：目前怎么选择，都是使用 cmd，待解决
+```
+
+##### * 跨平台构建
+
+```tex
+Build,Execution,Deployment | CMake
+➕ → [自动生成 Release]
+```
+
+#### File
+
+##### * 创建项目
+
+```markdown
+New | Project
+1) C++ Executable
+  创建一个可执行文件(.exe 文件，在 Windows 中)  →  这个类型的项目通常包括 main() 函数和程序的入口点
+  包含一个或多个源文件(例如 .cpp 文件)
+  通常会有一个 CMakeLists.txt 文件来管理构建过程，生成可执行文件
+2) C++ Library
+  创建一个静态库或动态库(例如 .lib 或 .dll 文件)  →  封装一些功能，编译成可以被其他程序调用的库，通常没有 main() 函数
+  包含一个或多个源文件(例如 .cpp 文件)
+  生成一个 .a 或 .lib 或 .dll 文件，供其他程序使用
+  同样使用 CMakeLists.txt 文件来配置构建过程
+3) [×]Add Onboarding Tips
+  勾选后，CLion会在创建项目时给一些帮助和提示，使得快速了解如何设置项目、构建、调试等功能
+```
+
+##### * 项目文件
+
+```markdown
+右击项目 | New
+1) cpp 和 h 一起创建
+[C++ Class]
+           → Name [xxx]
+           → Type [.cpp /.h]
+           → OK
+2) 只创建 c/cpp
+[C/C++ Source File]
+                   → Name [yyy]
+                   → Name [c / cpp / cu]
+3) 只创建 c/cpp 的 h 文件
+[C/C++ Header File]
+                   → Name [yyy]
+                   → Name [h / cuh]
+```
+
+##### * 重载项目
+
+```tex
+Reload CMake Project
+```
+
+#### Build
+
+##### * 构建项目
+
+```tex
+Build Project
+```
+
+##### * 重构项目
+
+```tex
+Rebuild Project
+```
+
+### # CLion-常见问题
+
+#### * 中文乱码
+
+##### 方案1 (推荐)
+
+```markdown
+# 取消勾选 pty
+[Ctrl + Alt + Shift + /] → Registry → [×] run.processes.with.pty
+
+# 在 Run 模式下
+CLion 默认使用 PTY 伪终端（Pseudo Terminal）运行进程，可能会影响控制台编码
+# 在 Debug 模式下
+不会使用 PTY，而是直接通过 GDB 运行
+# [×] run.processes.with.pty
+Run 进程也使用普通终端
+```
+
+##### 方案2 (可用)
+
+```markdown
+# 设置[输入/输出 编码]
+SetConsoleCP(65001);
+SetConsoleOutputCP(65001);
+```
+
+##### 方案3 (可用)
+
+```markdown
+# 设置[执行命令]
+system("chcp 65001");
+```
+
+##### 方案4 (无用)
+
+```markdown
+# CMakeLists.txt 配置
+-- [c++]
+Set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")
+-- [c]
+Set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -fexec-charset=GBK")
+```
+
+##### 注意：
+
+```markdown
+# 方案1 是在CLion[内部]执行
+# 方案2、方案3、方案4 是在CLion[外部]执行
+# [外部]执行，需要[暂停控制台]等待确认[否则会闪退]
+system("pause");
+
+# [勾选] 在外部控制台中运行
+Run | Edit Configurations → [√] Run in external console
+```
+
 ## 【[Pycharm](https://www.jetbrains.com/pycharm)】Python工具
 
 ```markdown
@@ -181,11 +355,27 @@ https://www.jetbrains.com/pycharm/download
 https://www.jetbrains.com/pycharm/download/other.html
 ```
 
-### # 基础配置
+### File | Settings
 
-#### File | Settings
+#### * 窗口设置
 
-##### * 解释器
+```tex
+同[IDEA]
+```
+
+#### * 字体样式
+
+```markdown
+同[IDEA]
+```
+
+#### * 编码设置
+
+```tex
+同[IDEA]
+```
+
+#### * 解释器配置
 
 ```markdown
 Project: xxx
@@ -197,11 +387,55 @@ Project: xxx
   Project Structure
 ```
 
-##### * 编码设置
+### File | New Projects Setup
 
 ```markdown
-# 全局编码、项目编码、属性文件的默认编码
-Editor | File Encodings → Global Encoding、Project Encoding、Default encoding for properties files → 设UTF-8
+# 新项目 -> 基础配置
+Settings for New Projects...
+```
+
+## 【[GoLand](https://www.jetbrains.com/go)】Go工具
+
+```markdown
+# 下载地址
+https://www.jetbrains.com/go/download
+
+# 往期版本
+https://www.jetbrains.com/go/download/other.html
+```
+
+### # 基础配置
+
+#### File | Settings
+
+##### * 窗口设置
+
+```tex
+同[IDEA]
+```
+
+##### * 字体样式
+
+```markdown
+同[IDEA]
+```
+
+##### * 编码设置
+
+```tex
+同[IDEA]
+```
+
+##### * 编译器配置
+
+```markdown
+Project: xxx
+  Python Interpreter
+  					 → Add Interpreter 设置[Interpreter 目录]
+  					 → 展开 Interpreter → Show All... 可对[Interpreter 进行 ➕ ➖]
+  					 → 点击[Package]上方[➕]，可进行包的搜索、下载、升级
+  					   [勾选 Specify version → 选择相应版本 → Install Package]
+  Project Structure
 ```
 
 #### File | New Projects Setup
@@ -211,6 +445,17 @@ Editor | File Encodings → Global Encoding、Project Encoding、Default encodin
 Settings for New Projects...
 ```
 
+### # GoLand-常见问题
+
+```markdown
+# GOPROXY may be required for normal Go modules integration in your region
+File | Settings | Go | Go Modules
+                                  → Enable Go modules integration
+                                    Environment:  GOPROXY=https://mirrors.aliyun.com/goproxy/
+```
+
+![image-20250322213423304](../imgs/01/Tools/GoLand/image-20250322213423304.png)
+
 ## 【[IDEA](https://www.jetbrains.com)】Java工具
 
 ```markdown
@@ -219,6 +464,12 @@ https://www.jetbrains.com/idea
 
 # 期版本
 https://www.jetbrains.com/idea/download/other.html
+
+# GitHub 授权登录
+姓名：Xavi Williams
+用户名：simpleway-wei
+账号：2244255266@qq.com
+密码：yibeiweishiji.0414
 ```
 
 ### # 常用快捷键
@@ -474,9 +725,13 @@ AspectJ							Java Compiler
 
 Alibaba Java Coding Guidelines	阿里巴巴规约(代码扫描插件)
 								File | Settings | Editor | Inspections → Ali-Check
-								搜索 "ThreadPoolExecutor" → Severity[Warming]
-								     "TimeTask" → Severity[Warming]
-								     ...
+								搜索
+								   ThreadPoolExecutor → Severity[Warming]
+								   TimeTask → Severity[Warming]
+								   'L' instead of 'l' → Severity[Warming]
+								   '==' directly → Severity[Warming]
+								   Braces are used with if → Severity[Warming]
+								   ...
 
 WakaTime						时间跟踪(GitHub账号授权)
 
@@ -613,10 +868,11 @@ Editor | General | Editor Tabs → 取消勾选 Show tabs in one row(选择 Mult
 Editor | General | Console → Default Encoding → 设UTF-8
 
 # 全局编码、项目编码、属性文件的默认编码
-Editor | File Encodings → Global Encoding
+Editor | File Encodings
+                        → Global Encoding
                         → Project Encoding
                         → Default encoding for properties files
-                          全部设为 UTF-8
+                          全部设为 [UTF-8]
                         → Transparent native-to-ascii conversion
                           [√] 在 .properties 文件中输入非 ASCII 字符时，会自动将这些字符转换为 Unicode 转义序列
                               如：爪哇 → 转义：\u722a\u54c7
@@ -651,7 +907,9 @@ Create UTF-8 files → with NO BOM(推荐)
 ```tex
 Editor
        | Natural Languages | Grammar and Style
-       | Inspections → Java/Javadoc/...
+       | Inspections → Java → Javadoc
+                                      → Javadoc declaration problems
+                                      → ...
 ```
 
 ##### * 代码[补全/提示]
@@ -1701,181 +1959,14 @@ File | Settings | Appearance & Behavior | Notifications → Microsoft Defender c
 | 排除项 → 添加或册删除排除项 | 添加排除项 → 文件夹
 ```
 
-## 【[CLion](https://www.jetbrains.com/clion)】c/C工具
+## 【开发】工具汇总
+
+### [DevEco Studio](https://developer.huawei.com/consumer/cn/deveco-studio) (HarmonyOS)
 
 ```markdown
-# 下载地址
-https://www.jetbrains.com/clion/download
-
 # 往期版本
-https://www.jetbrains.com/clion/download/other.html
+https://developer.huawei.com/consumer/cn/deveco-studio/archive
 ```
-
-### # 基础配置
-
-#### File | Settings
-
-##### * 窗口设置
-
-```tex
-同[IDEA]
-```
-
-##### * 字体样式
-
-```markdown
-同[IDEA]
-```
-
-##### * 编码设置
-
-```tex
-同[IDEA]
-```
-
-##### * 编译器配置
-
-```markdown
-Build,Execution,Deployment | Toolchains
-➕ → [MinGw]
-             → Name [MinGW]
-             → Toolset [Bundled / mingw64目录]
-             → Debugger [Bundled GDB / MinGW GDB]
-```
-
-##### * 终端配置
-
-```markdown
-Tools | Terminal
-                 → Application Settings
-                   → Shell path
-                     C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe
-                     C:\Windows\system32\cmd.exe
-                     删除为 null → 选择[系统环境变量]中[Path 优先级较高]的那一个
-                 注意：目前怎么选择，都是使用 cmd，待解决
-```
-
-##### * 跨平台构建
-
-```tex
-Build,Execution,Deployment | CMake
-➕ → [自动生成 Release]
-```
-
-#### File
-
-##### * 创建项目
-
-```markdown
-New | Project
-1) C++ Executable
-  创建一个可执行文件(.exe 文件，在 Windows 中)  →  这个类型的项目通常包括 main() 函数和程序的入口点
-  包含一个或多个源文件(例如 .cpp 文件)
-  通常会有一个 CMakeLists.txt 文件来管理构建过程，生成可执行文件
-2) C++ Library
-  创建一个静态库或动态库(例如 .lib 或 .dll 文件)  →  封装一些功能，编译成可以被其他程序调用的库，通常没有 main() 函数
-  包含一个或多个源文件(例如 .cpp 文件)
-  生成一个 .a 或 .lib 或 .dll 文件，供其他程序使用
-  同样使用 CMakeLists.txt 文件来配置构建过程
-3) [×]Add Onboarding Tips
-  勾选后，CLion会在创建项目时给一些帮助和提示，使得快速了解如何设置项目、构建、调试等功能
-```
-
-##### * 项目文件
-
-```markdown
-右击项目 | New
-1) cpp 和 h 一起创建
-[C++ Class]
-           → Name [xxx]
-           → Type [.cpp /.h]
-           → OK
-2) 只创建 c/cpp
-[C/C++ Source File]
-                   → Name [yyy]
-                   → Name [c / cpp / cu]
-3) 只创建 c/cpp 的 h 文件
-[C/C++ Header File]
-                   → Name [yyy]
-                   → Name [h / cuh]
-```
-
-##### * 重载项目
-
-```tex
-Reload CMake Project
-```
-
-#### Build
-
-##### * 构建项目
-
-```tex
-Build Project
-```
-
-##### * 重构项目
-
-```tex
-Rebuild Project
-```
-
-### # CLion-常见问题
-
-#### * 中文乱码
-
-##### 方案1 (推荐)
-
-```markdown
-# 取消勾选 pty
-[Ctrl + Alt + Shift + /] → Registry → [×] run.processes.with.pty
-
-# 在 Run 模式下
-CLion 默认使用 PTY 伪终端（Pseudo Terminal）运行进程，可能会影响控制台编码
-# 在 Debug 模式下
-不会使用 PTY，而是直接通过 GDB 运行
-# [×] run.processes.with.pty
-Run 进程也使用普通终端
-```
-
-##### 方案2 (可用)
-
-```markdown
-# 设置[输入/输出 编码]
-SetConsoleCP(65001);
-SetConsoleOutputCP(65001);
-```
-
-##### 方案3 (可用)
-
-```markdown
-# 设置[执行命令]
-system("chcp 65001");
-```
-
-##### 方案4 (无用)
-
-```markdown
-# CMakeLists.txt 配置
--- [c++]
-Set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")
--- [c]
-Set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -fexec-charset=GBK")
-```
-
-##### 注意：
-
-```markdown
-# 方案1 是在CLion[内部]执行
-# 方案2、方案3、方案4 是在CLion[外部]执行
-# [外部]执行，需要[暂停控制台]等待确认[否则会闪退]
-system("pause");
-
-# [勾选] 在外部控制台中运行
-Run | Edit Configurations → [√] Run in external console
-```
-
-## 【语言】工具汇总
 
 ### [Dev-C++](https://www.bloodshed.net) (C/C++)
 
@@ -1886,20 +1977,16 @@ https://sourceforge.net/projects/orwelldevcpp
 
 ### [Eclipse](https://www.eclipse.org) (Java)
 
-#### # 下载地址
-
-```tex
+```markdown
+# 下载地址
 https://www.eclipse.org/downloads
 https://www.eclipse.org/downloads/packages
-```
 
-往期版本
-
-```tex
+# 往期版本
 https://www.eclipse.org/downloads/packages/release
 ```
 
-下载须知
+#### # 下载须知
 
 点击 Select Another Mirror，选择China(国内)镜像才有下载速度
 
@@ -2228,13 +2315,14 @@ Visual GC						内存监控界面
   在 pluginscenters.html页面 点击对应版本 → 复制 Catalog URL 链接地址
 ```
 
-### # Apache Jmeter
+### # [Apache Jmeter](https://jmeter.apache.org)
 
 Java开发的 压力测试/负载测试 工具
 
 ```markdown
-# 官网
-https://jmeter.apache.org
+# 下载地址
+https://archive.apache.org/dist/jmeter
+https://github.com/apache/jmeter/tags
 
 # 教程
 https://blog.csdn.net/JohinieLi/article/details/113371078
@@ -2263,7 +2351,7 @@ E:/DevDoc/apache-jmeter-5.6.1/bin/jmeter.bat
   [√] Follow Redirects		[√] Use KeepAlive
 ```
 
-### # Arthas
+### # [Arthas](https://arthas.aliyun.com)
 
 阿里开源的 Java诊断工具
 
@@ -2275,20 +2363,129 @@ https://arthas.aliyun.com/doc/download.html
 https://github.com/alibaba/arthas/releases
 ```
 
-## 【接口】测试工具
+### # [MAT](https://eclipse.dev/mat)
 
-### # Apipost
+eclipse开发的 Java诊断工具
 
 ```markdown
-# 官网
+# 下载地址
+https://eclipse.dev/mat/download
+
+# 往期版本
+https://eclipse.dev/mat/download/previous
+```
+
+## 【网络】抓包工具
+
+### # [Wireshark](https://www.wireshark.org)
+
+```markdown
+# 下载地址
+https://www.wireshark.org/download.html
+
+# 往期版本
+https://www.wireshark.org/download/win64/all-versions
+```
+
+#### * 操作说明
+
+##### 捕获类别
+
+```markdown
+# WiFi(无线网)
+WLAN
+# 网线(光纤)
+以太网
+# VMware(虚拟机)
+VMware Network Adapter VMnet8
+```
+
+##### 数据包信息
+
+```markdown
+# 点击[WLAN]为例
+* Frame								物理层
+* Ethernet II						数据链路层
+* Internet Protocol					网络层
+* Transmission Control Protocol		传输层
+* Hypertext Transfer Protocol		应用层(会话层 → 表示层 → 应用层)
+```
+
+![image-20250323184628317](../imgs/01/Tools/Wireshark/image-20250323184628317.png)
+
+##### 获取一个IP
+
+```markdown
+# 先在浏览器访问一个域名(以 Chrome 为例)
+浏览器 → F12 → [Network] → 点击[Name]下的[域名] → [Headers] → 复制[Remote Address]的[IP地址]
+```
+
+![image-20250323192625019](../imgs/01/Tools/Wireshark/image-20250323192625019.png)
+
+##### 显示过滤器
+
+```bash
+# 说明
+过滤已捕获的数据包，符合条件的进行显示
+
+# 根据地址过滤
+ip.addr == 223.109.82.16
+# 多个条件用 && 连接
+ip.addr == 223.109.82.16 && tcp
+
+# 自动添加过滤
+选中一条记录 → 右击[某个分栏] → 作为过滤器应用 → 选中
+# 模糊匹配(contains)
+_ws.col.info contains "HTTP/1.1 200 OK"
+```
+
+![image-20250323194350618](../imgs/01/Tools/Wireshark/image-20250323194350618.png)
+
+##### 捕获过滤器
+
+```bash
+# 说明
+只捕获符合条件的数据包
+
+# 点击 ⚙(捕获选项) → 🔖(管理保存的书签)
+```
+
+![image-20250323201418749](../imgs/01/Tools/Wireshark/image-20250323201418749.png)
+
+### # [Fiddler](https://www.telerik.com/fiddler)
+
+```markdown
+# 下载地址
+https://www.ettercap-project.org/downloads.html
+# everywhere
+https://www.telerik.com/fiddler/fiddler-everywhere
+# classic
+https://www.telerik.com/fiddler/fiddler-classic
+```
+
+### # [Charles](https://www.charlesproxy.com)
+
+```markdown
+# 下载地址
+https://www.charlesproxy.com/download
+# previous
+https://www.charlesproxy.com/download/previous-release
+```
+
+## 【接口】测试工具
+
+### # [Apipost](https://www.apipost.cn)
+
+```markdown
+# 下载地址
 https://www.apipost.cn/download.html
 
 # 登录方式
-  邮箱：2244255266@qq.com
   用户名：Viski
+  邮箱：2244255266@qq.com
 ```
 
-### # Postman
+### # [Postman](https://www.postman.com)
 
 ```markdown
 # 官网
