--- a/账密文档/账户及密码.md
+++ b/账密文档/账户及密码.md
@@ -106,10 +106,19 @@ what.0414
 ## # [Proton邮箱](https://proton.me/mail)
 
 ```markdown
-# 账密
+# 账密1
 outtaame@proton.me
 what.0414
+# 用户名
+weiskey
+# 授权
+Google账户
 
+# 账密2
+linhanxavi@proton.me
+what.0414
+# 用户名
+viski
 # 授权
 Google账户
 ```
