--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -679,6 +679,12 @@ IDEA highlighting level → All Problems	检查所有error/warning
 
 [推荐整理]: https://zhuanlan.zhihu.com/p/391467740
 
+安装目录
+
+```tex
+%LocalAppData%\JetBrains  →  IntelliJIdeaxxxx.x\plugins
+```
+
 #### * Plugins 安装
 
 ```markdown
@@ -713,6 +719,9 @@ MyBatisCodeHelperPro			更强大的 MyBatis 插件(收费)
 
 * MyBatis Log Free				SQL日志插件
 								打开方式：Tools → MyBatis Log Plugin
+
+* SumnekoLua					编辑Lua脚本
+EmmyLua
 
 * jclasslib Bytecode Viewer		查看字节码
 Bytecode Viewer					Show Bytecode
