--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -688,24 +688,6 @@ https://baijiahao.baidu.com/s?id=1604210855080150766&wfr=spider&for=pc
 https://downloads.apache.org
 ```
 
-### # [Tomcat](https://tomcat.apache.org)
-
-```markdown
-# 下载地址
-https://downloads.apache.org/tomcat
-# 往期版本
-https://tomcat.apache.org/oldnews.html
-
-# 性能调优
-进入Tomcat首页，在 [Documentation] 下面，点击 [Tomcat x]，如 [Tomcat 9.0]
-  进入 https://tomcat.apache.org/tomcat-9.0-doc/index.html
-在 [Reference] 下面，点击 [Configuration]
-  进入 https://tomcat.apache.org/tomcat-9.0-doc/config/index.html
-在 [Connectors] 下面，点击 [HTTP/1.1] 或 [HTTP/2]
-  进入 https://tomcat.apache.org/tomcat-9.0-doc/config/http.html
-      https://tomcat.apache.org/tomcat-9.0-doc/config/http2.html
-```
-
 ### # [Maven](https://maven.apache.org)
 
 ```markdown
@@ -795,7 +777,30 @@ thrift -gen js:node user.thrift
 thrift -gen java -o ./target user.thrift
 ```
 
-### # [Dubbo](https://dubbo.apache.org)
+### # [Tomcat](https://tomcat.apache.org)
+
+#### * 下载地址
+
+```markdown
+https://downloads.apache.org/tomcat
+
+# 往期版本
+https://tomcat.apache.org/oldnews.html
+```
+
+#### * 性能调优
+
+```markdown
+进入Tomcat首页，在 [Documentation] 下面，点击 [Tomcat x]，如 [Tomcat 9.0]
+  进入 https://tomcat.apache.org/tomcat-9.0-doc/index.html
+在 [Reference] 下面，点击 [Configuration]
+  进入 https://tomcat.apache.org/tomcat-9.0-doc/config/index.html
+在 [Connectors] 下面，点击 [HTTP/1.1] 或 [HTTP/2]
+  进入 https://tomcat.apache.org/tomcat-9.0-doc/config/http.html
+      https://tomcat.apache.org/tomcat-9.0-doc/config/http2.html
+```
+
+### # [Dubbo](https://dubbo.apache.org) RPC服务框架
 
 #### * 版本网址
 
@@ -825,6 +830,15 @@ https://dubbo.apache.org/zh/docs/v3.0/references/configuration/api
 
 # v2.7
 https://dubbo.apache.org/zh/docs/v2.7/user/configuration/api
+```
+
+### # [Kafka](https://kafka.apache.org) 流处理组件
+
+```markdown
+# 下载地址
+https://kafka.apache.org/downloads
+# 往期版本
+https://sna-projects.com/kafka/downloads.php
 ```
 
 ### # [ShardingSphere](https://shardingsphere.apache.org/)
