--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -6799,13 +6799,16 @@ cp -a /source/data/A.md ./
 cp -a /source/data/* ./
 cp -a /source/data ./
 
-# rsync 可用于远程文件复制
+# scp/rsync 可用于远程文件复制 → 服务器路径为 → 用户@主机ip:目录 或 用户@主机hostname:目录
+scp 源路径文件 目标路径
 rsync 源路径文件 目标路径
+
 # 参数
   -a 表示
   -v 表示详细模式，会输出更多信息
   -z 表示压缩模式，对数据进行压缩后传输
 rsync -avz 源路径文件 url
+scp ./kafka-3.4.1-src.tgz root@work2:/usr/local/soft
 ```
 
 #### 重命名 & 移动
