--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -6170,7 +6170,7 @@ chcp 65001
 # PowerShell 输入
 $PROFILE
 # 输出如下(如果文件不存在，创建它)
-C:\Users\Viski\Documents\WindowsPowerShell\Microsoft.PowerShell_profile.ps1
+%UserProfile%\Documents\WindowsPowerShell\Microsoft.PowerShell_profile.ps1
 if (-not (Test-Path $PROFILE)) { New-Item -Path $PROFILE -ItemType File -Force }
 # 编辑 $PROFILE 文件，添加以下内容(只配置 [chcp 代码页] 就可以生效了)
 /* [UTF8] */
@@ -6408,7 +6408,7 @@ netsh winsock reset
 
 ```markdown
 # IDEA 服务文件 (可删除之前的版本)
-C:\Users\Viski\AppData\Local\JetBrains\IntelliJIdeaxxx.x
+%UserProfile%\AppData\Local\JetBrains → IntelliJIdeaxxx.x
 ```
 
 # Linux
