--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -3793,35 +3793,37 @@ v2rayN-windows-64-SelfContained.zip
 # 注意
 所有Cloudflare项目 都转移到了 linhanxavi@gmail.com
 
-# Author(6Kmfi6HP)	DNS(ClouDNS & DynV6)	Email(linhanxavi@gmail.com)
-https://6kw.weski.ip-ddns.com/6d68f9e6-07f1-4d5e-856d-a0b61cf09d14
-https://6kq.viskx.dynv6.net/bestip/5ef1ef0f-fec5-4881-a7c9-b918339391ac
+# Author(6Kmfi6HP)	DNS(US.KG & DynV6)	Email(linhanxavi@gmail.com)
+https://6kw.weski.dpdns.org/6d68f9e6-07f1-4d5e-856d-a0b61cf09d14
+https://6kp.viskx.dynv6.net/bestip/5ef1ef0f-fec5-4881-a7c9-b918339391ac
 
 # Author(cmliu)		DNS(US.KG)	Email(linhanxavi@gmail.com)
 -- cml_vs
-https://cmv.weski.us.kg/cmlgh?proxyip=ProxyIP.SG.CMLiussss.net
+https://cmv.weskx.dpdns.org/cmlgh?proxyip=ProxyIP.SG.CMLiussss.net
 -- cml_tj
-https://cmt.weskx.us.kg/cmlep?proxyip=ProxyIP.KR.CMLiussss.net
+https://cmt.wesky.dpdns.org/cmlep?proxyip=ProxyIP.KR.CMLiussss.net
+
+# Author(ygkkk)		DNS(US.KG & DynV6)	Email(linhanxavi@gmail.com)
+https://ygv.weski.dpdns.org/e87be5d7-a582-440f-a8ff-f4c93a2d2bcb/pty
+https://ygt.viskx.dynv6.net/qwe1234/pty
+
+# By Author(cmliu)
 -- Cmliu_Vless
-https://cmv.weski.us.kg/cmlgh?sub=SUB.CMLiussss.net&proxyip=tw.yutian.nyc.mn
+https://cmv.weskx.dpdns.org/cmlgh?sub=SUB.CMLiussss.net&proxyip=tw.yutian.nyc.mn
 -- 天诚_Trojan
-https://altrojan.comorg.us.kg/sub?host=cmt.weskx.us.kg&password=cmlep&path=%2F%3Fed%3D2560%26proxyip%3Ds14.serv00.com:15661
+https://alvless.filegear-sg.me/sub?host=cmt.wesky.dpdns.org&password=cmlep&path=%2F%3Fed%3D2560%26proxyip%3Dproxyip.tp27231.hbmc.net
 -- Moist_Vless
-https://cmv.weski.us.kg/cmlgh?sub=owo.o00o.ooo&proxyip=ts.hpc.tw
+https://cmv.weskx.dpdns.org/cmlgh?sub=owo.o00o.ooo&proxyip=ts.hpc.tw
 -- Moist_Trojan
-https://cmt.weskx.us.kg/cmlep?sub=owo.o00o.ooo&proxyip=proxyip.tp27231.hbmc.net
+https://cmt.wesky.dpdns.org/cmlep?sub=owo.o00o.ooo&proxyip=proxyip.tp27231.hbmc.net
 -- sos_cml_vls
 https://SOS.CMLiussss.net/auto
 
-# Author(ygkkk)		DNS(ClouDNS & DynV6)	Email(linhanxavi@gmail.com)
-https://ygv.weski.ip-ddns.com/e87be5d7-a582-440f-a8ff-f4c93a2d2bcb/pty
-https://ygt.viskx.dynv6.net/qwe1234/pty
-
-# 基于以上三种都可以生成订阅(以 cmliu 为例)
+# 基于以上三种都可以生成订阅(以 cmliu、ygkkk 为例)
 -- LC_CM_VS
-https://cmv.sosorg.ggff.net/sub?uuid=6c676877-1d8e-4b94-a2c7-d929732190cc&encryption=none&security=tls&sni=cmv.weski.us.kg&fp=random&type=ws&host=cmv.weski.us.kg&path=%2F%3Fed%3D2560%26proxyip%3DProxyIP.SG.CMLiussss.net
+https://opv.sosorg.dpdns.org/sub?uuid=f4515cb1-e81e-4e63-afd9-fd6c1ad5f0e1&encryption=none&security=tls&sni=cmv.weskx.dpdns.org&fp=random&type=ws&host=cmv.weskx.dpdns.org&path=%2F%3Fed%3D2560%26proxyip%3DProxyIP.SG.CMLiussss.net
 -- LC_YG_TJ
-https://cmt.sosorg.ggff.net/sub?password=qwe1234&security=tls&sni=ygt.viskx.dynv6.net&fp=randomized&type=ws&host=ygt.viskx.dynv6.net&path=%2F%3Fed%3D2560
+https://opt.sosorg.dpdns.org/sub?password=qwe1234&security=tls&sni=ygt.viskx.dynv6.net&fp=randomized&type=ws&host=ygt.viskx.dynv6.net&path=%2F%3Fed%3D2560
 
 # 通用DNS
 ts.hpc.tw
@@ -3837,6 +3839,12 @@ ProxyIP.HK.CMLiussss.net
 
 # 69云机场
 https://checkhere.top/link/I0CkVOowq1gZi7Dh?sub=3
+
+# 一分机场
+https://yifen.996.buzz/gengxin
+
+# 资源分享师
+https://dlink.host/1drv/aHR0cHM6Ly8xZHJ2Lm1zL3QvYy9jZDVmMDg0ZTUxNDhlMTc5L0VaTlV4ZU1aU3dOQ3JVTU5zYjNOUFhnQllQYjRkWEtPeUxsZ2ljZU5qWEczUGc_ZT1kNjN0eXE.jpg
 ```
 
 ## 【<a href="../document/01/Website/VPN\Clash介绍.md">Clash</a>】
@@ -3899,6 +3907,26 @@ Hiddify-Windows-Setup-x64.exe
 密码：what.0414
 ```
 
+## 【[US.KG](https://dash.domain.digitalplat.org)】
+
+[注册地址](https://register.us.kg) | [注册教程](https://www.youtube.com/watch?v=CVoEN8B8RyY)
+
+```markdown
+# 账号密码1
+邮箱：outtaame@gmail.com
+密码：what.0414
+# 域名
+viski.dpdns.org
+
+# 账号密码2
+邮箱：linhanxavi@gmail.com
+密码：what.0414
+# 域名
+weski.dpdns.org
+weskx.dpdns.org
+wesky.dpdns.org
+```
+
 ## 【[dynv6](https://dynv6.com/)】
 
 [注册教程1](#搭建Pages)  |  [注册教程2](https://www.youtube.com/watch?v=59THrmJhmAw)  |  [注册教程3](https://www.youtube.com/watch?v=CRVKvWw9SLk)
@@ -3915,6 +3943,13 @@ wk.viski.dynv6.net
 密码：what.0414
 # 域名
 dv.weiskey.dynv6.net
+
+# 账号密码3
+邮箱：linhanxavi@gmail.com
+密码：what.0414
+# 域名
+6kp.viskx.dynv6.net
+ygt.viskx.dynv6.net
 ```
 
 # VPS
