--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -3569,10 +3569,10 @@ Workers & Pages | Subdomain → 输入[新子域名] → Continue
 
 ```markdown
 # vless copy 地址
-https://node.weiskey.workers.dev/e920b2bb-c27a-4ddd-ae3f-83d5f9694842
+https://6kw.weski.dpdns.org/6d68f9e6-07f1-4d5e-856d-a0b61cf09d14
 
 # vlessMain
-vless://6d68f9e6-07f1-4d5e-856d-a0b61cf09d14@172.104.127.132:443?encryption=none&security=tls&sni=cd.weski.ip-ddns.com&fp=randomized&type=ws&host=cd.weski.ip-ddns.com&path=%2F%3Fed%3D2048#6kmfi_Japan_2
+vless://6d68f9e6-07f1-4d5e-856d-a0b61cf09d14@168.138.46.67:443?encryption=none&security=tls&sni=6kw.weski.dpdns.org&fp=randomized&type=ws&host=6kw.weski.dpdns.org&path=%2F%3Fed%3D2048#6kmfi_Japan_D
 ```
 
 ### [Pages部署](https://z008.blogspot.com/2024/03/YJJD.html)
@@ -3819,11 +3819,11 @@ https://cmt.wesky.dpdns.org/cmlep?sub=owo.o00o.ooo&proxyip=proxyip.tp27231.hbmc.
 -- sos_cml_vls
 https://SOS.CMLiussss.net/auto
 
-# 基于以上三种都可以生成订阅(以 cmliu、ygkkk 为例)
--- LC_CM_VS
-https://opv.sosorg.dpdns.org/sub?uuid=f4515cb1-e81e-4e63-afd9-fd6c1ad5f0e1&encryption=none&security=tls&sni=cmv.weskx.dpdns.org&fp=random&type=ws&host=cmv.weskx.dpdns.org&path=%2F%3Fed%3D2560%26proxyip%3DProxyIP.SG.CMLiussss.net
--- LC_YG_TJ
-https://opt.sosorg.dpdns.org/sub?password=qwe1234&security=tls&sni=ygt.viskx.dynv6.net&fp=randomized&type=ws&host=ygt.viskx.dynv6.net&path=%2F%3Fed%3D2560
+# 基于以上三种都可以生成订阅(以 ygkkk、cmliu 为例)
+-- LC_YG_VS
+https://opv.sosorg.dpdns.org/sub?uuid=e87be5d7-a582-440f-a8ff-f4c93a2d2bcb&encryption=none&security=tls&sni=ygv.weski.dpdns.org&fp=randomized&type=ws&host=ygv.weski.dpdns.org&path=%2F%3Fed%3D2560
+-- LC_CM_TJ
+https://opt.sosorg.dpdns.org/sub?password=cmlep&security=tls&sni=cmt.wesky.dpdns.org&fp=randomized&type=ws&host=cmt.wesky.dpdns.org&path=%2F%3Fed%3D2560%26proxyip%3DProxyIP.KR.CMLiussss.net
 
 # 通用DNS
 ts.hpc.tw
@@ -3902,9 +3902,17 @@ Hiddify-Windows-Setup-x64.exe
 [注册教程](https://kjgx668.blogspot.com/2023/12/cloudflare.html)
 
 ```markdown
-# 账号密码
+# 账号密码1
 邮箱：outtaame@gmail.com
 密码：what.0414
+# 域名
+viski.dns-dynamic.net
+
+# 账号密码2
+邮箱：linhanxavi@gmail.com
+密码：what.0414
+# 域名
+weski.ip-ddns.com
 ```
 
 ## 【[US.KG](https://dash.domain.digitalplat.org)】
