--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -476,6 +476,24 @@ eclipse.ini文件，在文件的最后添加指令：
 -Dhttps.protocols=TLSv1,TLSv1.1,TLSv1.2
 ```
 
+## 【[GitLab](https://gitlab.com)】官网
+
+### # 账号密码
+
+```markdown
+邮箱：outtaame@gmail.com
+用户名：viskixin
+密码：what.0414
+```
+
+### # 同步GitHub
+
+```markdown
+点击➕ → New project/repository → Import project
+```
+
+![image-20250418141351745](../imgs/01/Website/Git/GitLab/image-20250418141351745.png)
+
 ## 【[Gitee](https://gitee.com)】官网
 
 ### # 账号密码
@@ -512,10 +530,12 @@ eclipse.ini文件，在文件的最后添加指令：
 ```markdown
 # 添加 remote 地址，如下：
 [remote "origin"]
-	# GitHub 地址
-	url = https://github.com/viskixin/MainDoc.git
 	# Gitee 地址
 	url = https://gitee.com/simpleway/MainDoc.git
+	# GitLab 地址
+	url = https://gitlab.com/viskixin/MainDoc.git
+	# GitHub 地址
+	url = https://github.com/viskixin/MainDoc.git
 	fetch = +refs/heads/*:refs/remotes/origin/*
 # 注意
 Github 上的默认分支为 main
@@ -572,24 +592,6 @@ git remote set-url origin https://qq_41519754:fxW14yxZaqWmRTdrLWy_8Jfb@gitcode.c
 # 不想每次输入 Token，可以配置 Git 凭据存储
 git config --global credential.helper store
 ```
-
-## 【[GitLab](https://gitlab.com)】官网
-
-### # 账号密码
-
-```markdown
-邮箱：outtaame@gmail.com
-用户名：viskixin
-密码：what.0414
-```
-
-### # 同步GitHub
-
-```markdown
-点击➕ → New project/repository → Import project
-```
-
-![image-20250418141351745](../imgs/01/Website/Git/GitLab/image-20250418141351745.png)
 
 ## 【[TortoiseSVN](https://tortoisesvn.net)】官网
 
