--- a/账密文档/账户及密码.md
+++ b/账密文档/账户及密码.md
@@ -457,6 +457,13 @@ https://github.com/viskixin/DevSpace.git
  -- [IdeaDoc]  →  Java文件
 ```
 
+## [GitLab](https://gitlab.com)
+
+```markdown
+https://gitlab.com/viskixin/MainDoc.git
+https://gitlab.com/viskixin/DevSpace.git
+```
+
 ## [Gitee](https://gitee.com)
 
 ```markdown
@@ -487,6 +494,8 @@ git commit -m "Y2025M01D30" --no-verify
 [remote "origin"]
 	# Gitee 地址
 	url = https://gitee.com/simpleway/MainDoc.git
+	# GitLab 地址
+	url = https://gitlab.com/viskixin/MainDoc.git
 	# GitHub 地址
 	url = https://github.com/viskixin/MainDoc.git
 
@@ -494,13 +503,15 @@ git commit -m "Y2025M01D30" --no-verify
 [remote "origin"]
 	# Gitee 地址
 	url = https://gitee.com/simpleway/DevSpace.git
+	# GitLab 地址
+	url = https://gitlab.com/viskixin/DevSpace.git
 	# GitHub 地址
 	url = https://github.com/viskixin/DevSpace.git
 
 # AnnoMark
 [remote "origin"]
 	# GitCode 地址
-	url = https://qq_41519754:fxW14yxZaqWmRTdrLWy_8Jfb@gitcode.com/qq_41519754/AnnoMark.git
+	url = https://gitcode.com/qq_41519754/AnnoMark.git
 	# Gitea 地址
 	url = https://gitea.com/outta/AnnoMark.git
 ```
