--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -3577,7 +3577,7 @@ Workers & Pages | Subdomain → 输入[新子域名] → Continue
 
 <a href="../document/01/Website/VPN\_worker.js">_worker.js</a>  →  [GitHub资源](https://github.com/3Kmfi6HP/EDtunnel)
 
-编辑服务器  |  <a href="../document/01/Website/VPN\IP_域名_端口.md">节点优选</a>
+编辑服务器  |  <a href="../document/01/Website/VPN/IP_域名_端口.md">节点优选</a>
 
 ```markdown
 # vless copy 地址
@@ -3859,7 +3859,7 @@ https://yifen.996.buzz/gengxin
 https://dlink.host/1drv/aHR0cHM6Ly8xZHJ2Lm1zL3QvYy9jZDVmMDg0ZTUxNDhlMTc5L0VaTlV4ZU1aU3dOQ3JVTU5zYjNOUFhnQllQYjRkWEtPeUxsZ2ljZU5qWEczUGc_ZT1kNjN0eXE.jpg
 ```
 
-## 【<a href="../document/01/Website/VPN\Clash介绍.md">Clash</a>】
+## 【<a href="../document/01/Website/VPN/Clash介绍.md">Clash</a>】
 
 ### [使用教学](https://www.youtube.com/watch?v=IJM5aHaeET8)
 
