--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -3592,7 +3592,7 @@ E:\Typora\Workspace
 
 锚点链接：
 [锚链接标题](#标题内容)
-例如：标题内容 → “* 切换源码编辑模式”
+例如：标题内容  →  * 切换源码编辑模式
 [文本内部标题](#* 切换源码编辑模式)
 注意：标题内容中的【空格】可用“-”符号代替
 [文本内部内容](#*-切换源码编辑模式)
