--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -877,7 +877,7 @@ https://shardingsphere.apache.org/document/5.2.1/cn/overview
 
 ## 【[CentOS](https://www.centos.org)】官网
 
-[VMware 安装镜像](./常用工具.md##-新建虚拟机)
+[VMware 安装镜像](./常用工具.md#-新建虚拟机)
 
 ```markdown
 # 下载地址
