--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -5739,6 +5739,16 @@ https://blog.csdn.net/begefefsef/article/details/126098501
 
 注意：执行文件中的[引号]要为[英文字符]，注册完之后[重启电脑]
 
+### 取消并清除[快速访问]
+
+```markdown
+# 注意：这是处理系统自动添加的，而非手动添加的
+查看更多 | 选项 | 常规 → 隐私
+                           → [×] 显示最近使用的文件
+                           → [×] 显示常用文件夹
+                           → 点击 [清除]
+```
+
 ### 搜索图标样式设置
 
 方式1
