--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -673,6 +673,9 @@ IDEA highlighting level → All Problems	检查所有error/warning
 # [配置]和[缓存]
 %LOCALAPPDATA%\JetBrains
 -- C:\Users\Viski\AppData\Local\JetBrains
+
+# Condition 记录 (随机字符.xml → 可修改断点之后，再按照修改时间倒序查看)
+%APPDATA%\JetBrains\IntelliJIdea2024.3\workspace → xxx.xml
 ```
 
 ### # IDEA-插件
@@ -3830,6 +3833,13 @@ https://notepad-plus-plus.org/downloads
 
 ```markdown
 选择文件 → 右击 → Edit with Notepad++
+```
+
+#### * 搜索记录
+
+```markdown
+# 注意：不要用 Notepad 本身编辑删除，否则删不掉
+%APPDATA%\Notepad++  的  config.xml 中删除 Filter 下的 Find、Replace
 ```
 
 打开搜索结果
