--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -5780,6 +5780,13 @@ cd C:\Tools\ViVeTool-v0.3.2
          vivetool /query /id:42038001
 ```
 
+### 应用卸载
+
+````markdown
+# 如 Microsoft 365 Copilot
+设置 → 应用 → 安装的应用 →  搜索 Copilot → 点击 •••  →  卸载
+````
+
 ## 命令与快捷键
 
 ### 开始中的命令
